--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,18 +3,11 @@ name = "giallo"
 version = "0.0.1"
 edition = "2021"
 license = "MIT"
-description = "A HTML code highlighter built on top of tree-sitter"
+description = "A HTML code highlighter"
 
 [dependencies]
-tree-sitter = "0.20.8"
-once_cell = "1.13.0"
-# TODO: we can maybe just copy the code from there? Avoids some deps
-tree-sitter-highlight = "0.20.1"
+onig = { version = "6", default-features = false }
+serde_json = "1"
+serde_derive = "1"
+serde = "1"
 
-# And then all the languages
-tree-sitter-rust = { version = "0.20.1", optional = true }
-
-[features]
-default = ["lang-rust"]
-
-lang-rust = ["dep:tree-sitter-rust"]
