--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,22 @@ description = "A HTML code highlighter"
 [dependencies]
 onig = { version = "6", default-features = false }
 serde_json = "1"
-serde_derive = "1"
-serde = "1"
+serde = { version = "1", features = ["derive"] }
+phf = "0.13"
+bincode = "2"
+thiserror = "1.0"
+
+# Optional dependencies for the generator tool
+phf_codegen = { version = "0.13", optional = true }
+walkdir = { version = "2.0", optional = true }
+
+[features]
+tools = ["phf_codegen", "walkdir"]
+
+[dev-dependencies]
+
+[[bin]]
+name = "tm-generate"
+path = "tools/generate.rs"
+required-features = ["tools"]
 
