--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ bincode = "2"
 # Optional dependencies for the generator tool
 phf_codegen = { version = "0.13", optional = true }
 walkdir = { version = "2.0", optional = true }
+regex = "1.11.3"
 
 [features]
 tools = ["phf_codegen", "walkdir"]
