--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "MIT"
 description = "A HTML code highlighter"
 
 [dependencies]
-onig = { version = "6", default-features = false }
+onig = { version = "6", default-features = false, path = "../pulls/rust-onig/onig" }
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 phf = "0.13"
