--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,14 @@ description = "A HTML code highlighter"
 onig = { version = "6", default-features = false, path = "../pulls/rust-onig/onig" }
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
-phf = "0.13"
 bincode = "2"
 
 # Optional dependencies for the generator tool
-phf_codegen = { version = "0.13", optional = true }
 walkdir = { version = "2.0", optional = true }
 regex = "1.11.3"
 
 [features]
-tools = ["phf_codegen", "walkdir"]
+tools = ["walkdir"]
 
 [dev-dependencies]
 insta = "1.39"
