--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tools = ["walkdir"]
 [dev-dependencies]
 insta = "1.39"
 criterion = "0.7"
+pretty_assertions = "1.0"
 
 [[bench]]
 name = "tokenizer"
