--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,8 +25,9 @@ criterion = "0.7"
 pretty_assertions = "1.0"
 
 [[bench]]
-name = "tokenizer"
+name = "registry"
 harness = false
+required-features = ["dump"]
 
 [[bin]]
 name = "tm-stats"
