--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,25 @@ insta = { version = "1", features = ["yaml"] }
 insta.opt-level = 3
 similar.opt-level = 3
 
+[profile.release]
+debug = true
+
 [[bench]]
 name = "registry"
 harness = false
+required-features = ["dump"]
+
+[[bench]]
+name = "highlight_benchmark"
+harness = false
+required-features = ["dump"]
+
+[[bench]]
+name = "regset_vs_regex"
+harness = false
+
+[[example]]
+name = "profile_jquery"
 required-features = ["dump"]
 
 [[bin]]
