--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,11 @@ serde = { version = "1", features = ["derive"] }
 rmp-serde = { version = "1.1", optional = true }
 flate2 = { version = "1.0", optional = true }
 
+log = { version = "0.4", optional = true }
+
 [features]
 tools = ["dump"]
-debug = []
+debug = ["dep:log"]
 builtins = []
 dump = ["dep:rmp-serde", "dep:flate2"]
 
