--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "grammars-themes"]
 	path = grammars-themes
 	url = https://github.com/shikijs/textmate-grammars-themes.git
+[submodule "vscode-textmate"]
+	path = vscode-textmate
+	url = git@github.com:microsoft/vscode-textmate.git
