--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,56 @@
 [package]
 name = "giallo"
 version = "0.0.1"
-edition = "2021"
-license = "MIT"
-description = "A HTML code highlighter built on top of tree-sitter"
+edition = "2024"
+license = "EUPL-1.2"
+description = "A HTML code highlighter"
 
 [dependencies]
-tree-sitter = "0.20.8"
-once_cell = "1.13.0"
-# TODO: we can maybe just copy the code from there? Avoids some deps
-tree-sitter-highlight = "0.20.1"
+onig = { version = "6", default-features = false, git = "https://github.com/Keats/rust-onig", branch = "main" }
+serde_json = "1"
+serde = { version = "1", features = ["derive"] }
 
-# And then all the languages
-tree-sitter-rust = { version = "0.20.1", optional = true }
+# Optional dependencies for serialization
+rmp-serde = { version = "1.1", optional = true }
+flate2 = { version = "1.0", optional = true }
+
+log = { version = "0.4", optional = true }
 
 [features]
-default = ["lang-rust"]
+tools = ["dump"]
+debug = ["dep:log"]
+builtins = []
+dump = ["dep:rmp-serde", "dep:flate2"]
 
-lang-rust = ["dep:tree-sitter-rust"]
+[dev-dependencies]
+criterion = "0.7"
+pretty_assertions = "1.0"
+insta = { version = "1", features = ["yaml"] }
+env_logger = "0.11.8"
+
+[profile.dev.package]
+insta.opt-level = 3
+similar.opt-level = 3
+
+[profile.release]
+debug = true
+
+[[bench]]
+name = "registry"
+harness = false
+required-features = ["dump"]
+
+[[bench]]
+name = "highlight_benchmark"
+harness = false
+required-features = ["dump"]
+
+[[example]]
+name = "profile_jquery"
+required-features = ["dump"]
+
+[[bin]]
+name = "build-registry"
+path = "tools/build_registry.rs"
+required-features = ["tools"]
+
