--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,4 +87,5 @@ jobs:
       - name: Run examples
         run: |
           cargo run --release --example=profile_jquery --features="dump"
-          cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript
+          cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe
+          cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe red
