--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,11 +81,11 @@ jobs:
         run: |
           just generate-tests
           just generate-dump
-          cargo test
-          cargo test --all-features
+          cargo test --release
+          cargo test --release --all-features
 
       - name: Run examples
         run: |
           cargo run --release --example=profile_jquery --features="dump"
-          cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript
-          cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript g
+          cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe
+          cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe red
