--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,10 @@ required-features = ["dump"]
 name = "output_html"
 required-features = ["dump"]
 
+[[example]]
+name = "custom_rendering"
+required-features = ["dump"]
+
 [[bin]]
 name = "build-registry"
 path = "tools/build_registry.rs"
