--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,9 @@ jobs:
           components: clippy
 
       - name: Run clippy
-        run: cargo clippy --all-features --all-targets -- -D warnings
+        run: |
+          touch builtin.msgpack
+          cargo clippy --all-features --all-targets -- -D warnings
 
   tests:
     name: Run tests
@@ -87,5 +89,6 @@ jobs:
       - name: Run examples
         run: |
           cargo run --release --example=profile_jquery --features="dump"
+          cargo run --release --example=custom_rendering --features="dump"
           cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe
           cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe red
