--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,3 +92,4 @@ jobs:
           cargo run --release --example=custom_rendering --features="dump"
           cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe
           cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe red
+          cargo run --release --example html_classes --features dump
