--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ dump = ["dep:rmp-serde", "dep:flate2"]
 [dev-dependencies]
 criterion = "0.8"
 insta = { version = "1", features = ["yaml"] }
+fancy-regex = "0.17"
 # env_logger = "0.11.8"
 
 [profile.dev.package]
