--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "A code highlighter giving the same output as VSCode"
 repository = "https://github.com/getzola/giallo"
 
 [dependencies]
-onig = { version = "6", default-features = false, git = "https://github.com/Keats/rust-onig", branch = "main" }
+onig = { package = "onig-regset", version = "6", default-features = false }
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
 
