--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,7 @@ jobs:
 
       - name: Run examples
         run: |
+          cargo run --release --example=basic --features="dump"
           cargo run --release --example=profile_jquery --features="dump"
           cargo run --release --example=custom_rendering --features="dump"
           cargo run --release --example output_html --features="dump" -- grammars-themes/samples/javascript.sample javascript catppuccin-frappe
