--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ include = [
 onig = { package = "onig-regset", version = "6", default-features = false }
 serde_json = "1"
 serde = { version = "1", features = ["derive"] }
+papaya = "0.2"
 
 # Optional dependencies for serialization
 rmp-serde = { version = "1.1", optional = true }
@@ -62,6 +63,10 @@ required-features = ["dump"]
 
 [[example]]
 name = "profile_jquery"
+required-features = ["dump"]
+
+[[example]]
+name = "profile_simple_ts"
 required-features = ["dump"]
 
 [[example]]
